[package]
name = "rdtp"
version = "0.1.0"
authors = ["luweiba <320501900@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.3"
crc = "1.8.1"
rand = "0.8.3"